--- a/example/flutter_sound_example/pubspec.yaml
+++ b/example/flutter_sound_example/pubspec.yaml
@@ -32,13 +32,13 @@ dependencies:
   google_speech:
     path: ../../
   flutter_sound_lite: ^8.5.0
-  permission_handler: ^11.1.0
-  path_provider: ^2.1.2
-  rxdart: ^0.27.3
+  permission_handler: ^12.0.0+1
+  path_provider: ^2.1.5
+  rxdart: ^0.28.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +68,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - assets/test_service_account.json
-
+  - assets/test_service_account.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
