--- a/example/flutter_sound_example_v2/pubspec.yaml
+++ b/example/flutter_sound_example_v2/pubspec.yaml
@@ -33,15 +33,13 @@ dependencies:
   google_speech:
     path: ../../
   flutter_sound_lite: ^8.5.0
-  permission_handler: ^11.0.1
-  path_provider: ^2.1.1
-  rxdart: ^0.27.3
-
-
+  permission_handler: ^12.0.0+1
+  path_provider: ^2.1.5
+  rxdart: ^0.28.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
@@ -65,10 +63,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/test_service_account.json
-    - assets/test.wav
-    - assets/test.flac
-
+  - assets/test_service_account.json
+  - assets/test.wav
+  - assets/test.flac
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
